objects/Demo_Object__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Field__c</fullName>
        <label>First Field</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Field__c</fullName>
        <label>Second Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Demo Object</label>
    <nameField>
        <label>Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>